--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -35,8 +35,8 @@ Helium wallet, you're able to do things like:
 
 ## Guides
 
-- [Twelve Words Seed Phrase](/wallets/twelve-words)
-- [Twenty Four Words Seed Phrase](/wallets/twenty-four-words)
+- [Twelve Word Seed Phrase](/wallets/twelve-words)
+- [Twenty Four Word Seed Phrase](/wallets/twenty-four-words)
 - [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
 - [Understanding Hexagons](/wallets/app-wallet/hexagons)
 - [Transaction Failures](/wallets/app-wallet/transaction-failures)
