--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -17,8 +17,8 @@ transferred, the new owner will receive all future Hotspot mining rewards. The
 [Helium Wallet app](/wallets/helium-wallet-app) cannot be used to transfer Hotspots between wallets.
 
 Do not transfer hotspots to wallets created with 24-words unless the Hotspot Management App supports
-24 words. If a Hotspot is transferred to a 24-words wallet, you can use the
-[Wallet CLI](/wallets/cli-wallet) to transfer the Hotspot to a 12-words wallet.
+24 words. If a Hotspot is transferred to a 24-word wallet, you can use the
+[Wallet CLI](/wallets/cli-wallet) to transfer the Hotspot to a 12-word wallet.
 
 ### Requirements
 
@@ -28,7 +28,7 @@ Do not transfer hotspots to wallets created with 24-words unless the Hotspot Man
 
 * Parties do not need to be physically next to the Hotspot for transfer to succeed.
 
-- This feature requires both users to have a valid Helium wallet account. Remember, 24-words wallets
+- This feature requires both users to have a valid Helium wallet account. Remember, 24-word wallets
   are not supported by the Helium Hotspot App.
 - The Seller pays the transaction fee of ~55,000 DC.
 - Hotspots must have had LoraWAN Proof-of-Coverage activity (Issued a Broadcast Beacon or Witnessed
