--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -63,23 +63,23 @@ More information on the [Helium Hotspot App](/wallets/app-wallet)
 
 :::
 
-## 12-Words and 24-Words Seed Phrases
+## 12-Word and 24-Word Seed Phrases
 
-When a Helium Wallet is created with the Helium Wallet App or Helium Hotspot App, a 12-words or
-24-words "Seed Phrase" is generated.
+When a Helium Wallet is created with the Helium Wallet App or Helium Hotspot App, a 12-word or
+24-word "Seed Phrase" is generated.
 
-Users who created their Helium Wallet using the Helium Hotspot App will have a 12-words seed phrase,
-while the Helium Wallet App accepts 12-words seed phrases, all new wallets are created with 24-words
+Users who created their Helium Wallet using the Helium Hotspot App will have a 12-word seed phrase,
+while the Helium Wallet App accepts 12-word seed phrases, all new wallets are created with 24-word
 seed phrases.
 
-Read more about Helium 12-words and 24-words here:
+Read more about Helium 12-word and 24-word here:
 
-- [12 Words Seed Phrase](/wallets/twelve-words)
-- [24 Words Seed Phrase](/wallets/twenty-four-words)
+- [12-Word Seed Phrase](/wallets/twelve-words)
+- [24-Word Seed Phrase](/wallets/twenty-four-words)
 
 :::note
 
-Transferring Hotspot ownership between 12-words and 24-words wallets can only be done using the
+Transferring Hotspot ownership between 12-word and 24-word wallets can only be done using the
 [Wallet CLI](/wallets/cli-wallet)
 
 :::
