pluralizing clean up

--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -16,8 +16,8 @@ This feature enables Hotspot owners to transfer ownership of a Hotspot to anothe
 transferred, the new owner will receive all future Hotspot mining rewards. The
 [Helium Wallet app](/wallets/helium-wallet-app) cannot be used to transfer Hotspots between wallets.
 
-Do not transfer hotspots to wallets created with 24-words unless the Hotspot Management App supports
-24 words. If a Hotspot is transferred to a 24-word wallet, you can use the
+Do not transfer Hotspots to wallets created with 24-word seed phrases unless the Hotspot Management
+App supports 24-word seed phrases. If a Hotspot is transferred to a 24-word wallet, you can use the
 [Wallet CLI](/wallets/cli-wallet) to transfer the Hotspot to a 12-word wallet.
 
 ### Requirements
