Apply suggestions from code review
Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -43,7 +43,7 @@ you can import it into the Wallet app.
 
 Wallets created with the Helium Wallet app are generated with a 24-word seed phrase. These 24 words
 in correct order are the only way to access the wallet, and can never be recovered if lost. **They
-should never be shared**, as whoever has them is considered the owner of the HNT included. Anyone
+should never be shared**, as whoever has them is considered the owner of all Tokens, Hotspots, or Validators. Anyone
 asking for them is guaranteed to be a scammer.
 
 **Taking and storing screenshots of the seed words is not recommended, as it is not a** secure way
