--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -43,8 +43,8 @@ you can import it into the Wallet app.
 
 Wallets created with the Helium Wallet app are generated with a 24-word seed phrase. These 24 words
 in correct order are the only way to access the wallet, and can never be recovered if lost. **They
-should never be shared**, as whoever has them is considered the owner of all Tokens, Hotspots, or Validators. Anyone
-asking for them is guaranteed to be a scammer.
+should never be shared**, as whoever has them is considered the owner of all Tokens, Hotspots, or
+Validators. Anyone asking for them is guaranteed to be a scammer.
 
 **Taking and storing screenshots of the seed words is not recommended, as it is not a** secure way
 to store them. Screenshots and photos stored or backed up in the cloud can easily be hacked and
