--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -16,7 +16,7 @@ This functionality is moving to the new [Helium Wallet App](/wallets/helium-wall
 
 :::
 
-The Helium Hotspot App focuses on people who want to send or receive HNT or manage hotspots. Other
+The Helium Hotspot App focuses on people who want to send or receive HNT or manage Hotspots. Other
 activities, such as managing end-devices and OUIs (i.e. users of the network) are generally best
 suited for the command line wallet.
 
