moar capitalization fixes

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -45,7 +45,7 @@ Helium wallet, you're able to do things like:
 
 ## Hotspot Tab
 
-The Hotspot tab shows your hotspot(s). There's a location map, the Hotspots Settings section (gear
+The Hotspot tab shows your Hotspot(s). There's a location map, the Hotspots Settings section (gear
 icon), as well as a general health status (Online or Needs Attention). The settings provide access
 to updating the location and WiFi network, as well as running the Hotspots diagnostic report if
 needed.
@@ -61,7 +61,7 @@ and recent transactions.
 
 ## Notifications Tab
 
-This sections gives you a timeline view of all notifications relevant to your hotspots and wallet
+This sections gives you a timeline view of all notifications relevant to your Hotspots and wallet
 transcations.
 
 <img src={useBaseUrl('img/wallets/helium-app/notifications-nav.png')} />
