--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -322,8 +322,8 @@ To transfer a Hotspot from a 24-word wallet to a 12-word wallet, follow the step
 
 | argument                   | description                                                             |
 | -------------------------- | ----------------------------------------------------------------------- |
-| `-f my-24-word-wallet.key` | use a file for the hotspot wallet, in this case `my-24-word-wallet.key` |
-| `hotspots transfer`        | run a hotspot transfer                                                  |
+| `-f my-24-word-wallet.key` | use a file for the Hotspot wallet, in this case `my-24-word-wallet.key` |
+| `hotspots transfer`        | run a Hotspot transfer                                                  |
 | `<gateway>`                | the gateway id you collected from Step 4 above                          |
 | `<new-owner>`              | the public Wallet Address to receive the Hotspot                        |
 
