--- a/docs/wallets/twelve-words.mdx
+++ b/docs/wallets/twelve-words.mdx
@@ -14,7 +14,7 @@ the only way to access the wallet.
 The 12-word seed can be used or imported on both the [Helium Hotspot App](/wallets/app-wallet) and
 the [Helium Wallet App](/wallets/helium-wallet-app). You cannot import a 24-word seed phrase in the
 Helium Hotspot App, these will only work in the Helium Wallet App. Hotspots sent to a 24-word wallet
-can only be managed/transferred by the hotspot vendor's app or the CLI Wallet.
+can only be managed/transferred by the Hotspot vendor's app or the CLI Wallet.
 
 :::warning
 
@@ -33,7 +33,7 @@ App, those 12 words represent the private key to your wallet account.
 ### What Does This Mean?
 
 It means that those 12 words are the only way to access your Hotspots and HNT balance. Lose those 12
-words and you lose your access to your HNT and your hotspots and their future earnings. No one can
+words and you lose your access to your HNT and your Hotspots and their future earnings. No one can
 help you recover them.
 
 Luckily, there is an easy way to back up those 12 words. Write them down, save them, and back them
