--- a/docs/wallets/twenty-four-words.mdx
+++ b/docs/wallets/twenty-four-words.mdx
@@ -19,7 +19,7 @@ You cannot import a 24-word seed phrase in the Helium Hotspot App.
 
 :::
 
-Hotspots sent to a 24-word wallet can only be managed/transferred by the hotspot vendor's app or the
+Hotspots sent to a 24-word wallet can only be managed/transferred by the Hotspot vendor's app or the
 CLI Wallet.
 
 :::warning
@@ -39,7 +39,7 @@ App, those 24 words represent the private key to your wallet account.
 ### What Does This Mean?
 
 It means that those 24 words are the only way to access your Hotspots and HNT balance. Lose those 24
-words and you lose your access to your HNT and your hotspots and their future earnings. No one can
+words and you lose your access to your HNT and your Hotspots and their future earnings. No one can
 help you recover them.
 
 Luckily, there is an easy way to back up those 24 words. Write them down, save them, and back them
