--- a/docs/wallets/twelve-words.mdx
+++ b/docs/wallets/twelve-words.mdx
@@ -14,7 +14,7 @@ the only way to access the wallet.
 The 12-word seed can be used or imported on both the [Helium Hotspot App](/wallets/app-wallet) and
 the [Helium Wallet App](/wallets/helium-wallet-app). You cannot import a 24-word seed phrase in the
 Helium Hotspot App, these will only work in the Helium Wallet App. Hotspots sent to a 24-word wallet
-can only be managed/transferred by the Hotspot vendor's app or the CLI Wallet.
+can only be managed/transferred by the Hotspot Maker app or the CLI Wallet.
 
 :::warning
 
