--- a/docs/wallets/twenty-four-words.mdx
+++ b/docs/wallets/twenty-four-words.mdx
@@ -19,7 +19,7 @@ You cannot import a 24-word seed phrase in the Helium Hotspot App.
 
 :::
 
-Hotspots sent to a 24-word wallet can only be managed/transferred by the Hotspot vendor's app or the
+Hotspots sent to a 24-word wallet can only be managed/transferred by the Hotspot Maker app or the
 CLI Wallet.
 
 :::warning
