transfer Hotspot Common Questions link to guide
also removed errant `:::`

--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -73,8 +73,6 @@ will arrive in working condition.
 
 7. The Seller will see an activity entry on their Account page showing the Hotspot Transfer.
 
-:::
-
 ## As a Buyer:
 
 Once the transaction clears, a notification will appear in the Buyer’s notification center. The
@@ -83,6 +81,11 @@ Hotspot will then show up in the Buyers wallet. Tap on the notification to view 
 <img src={useBaseUrl('img/wallets/helium-app/transfer-completed-transaction-v2.png')} />
 
 ## Common Questions
+
+### Can I transfer a Hotspot from a 24-word wallet to a 12-word wallet?
+
+Yes. Hotspots can be transferred from a 24-word wallet to a 12-word wallet using the
+[CLI](/wallets/cli-wallet#transfer-hotspot-from-24-word-wallet).
 
 ### Can I undo the transaction?
 
