How to transfer a Hotspot from a 24-words to 12-words wallet (#980)
* added page on 24-words wallets navigation fixups

* instructions to transfer hotspot from 24 to 12 word wallet

* formatting and term consistency across docs

* depluralizing “x-words”

“x-word seed phrase” when referring to seed phrase
“x words” when referring to the collection of individual words

* pluralizing clean up

* Apply suggestions from code review

Co-authored-by: Coco Tang <coco@helium.com>

* line wrap

* capitalization

* moar capitalization fixes

* “vendor” -> “Maker”

* transfer Hotspot Common Questions link to guide

also removed errant `:::`

Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -16,8 +16,8 @@ This feature enables Hotspot owners to transfer ownership of a Hotspot to anothe
 transferred, the new owner will receive all future Hotspot mining rewards. The
 [Helium Wallet app](/wallets/helium-wallet-app) cannot be used to transfer Hotspots between wallets.
 
-Do not transfer hotspots to wallets created with 24 words unless the Hotspot Management App supports
-24 words. If a Hotspot is transferred to a 24-word wallet, you can use the
+Do not transfer Hotspots to wallets created with 24-word seed phrases unless the Hotspot Management
+App supports 24-word seed phrases. If a Hotspot is transferred to a 24-word wallet, you can use the
 [Wallet CLI](/wallets/cli-wallet) to transfer the Hotspot to a 12-word wallet.
 
 ### Requirements
@@ -73,8 +73,6 @@ will arrive in working condition.
 
 7. The Seller will see an activity entry on their Account page showing the Hotspot Transfer.
 
-:::
-
 ## As a Buyer:
 
 Once the transaction clears, a notification will appear in the Buyer’s notification center. The
@@ -83,6 +81,11 @@ Hotspot will then show up in the Buyers wallet. Tap on the notification to view 
 <img src={useBaseUrl('img/wallets/helium-app/transfer-completed-transaction-v2.png')} />
 
 ## Common Questions
+
+### Can I transfer a Hotspot from a 24-word wallet to a 12-word wallet?
+
+Yes. Hotspots can be transferred from a 24-word wallet to a 12-word wallet using the
+[CLI](/wallets/cli-wallet#transfer-hotspot-from-24-word-wallet).
 
 ### Can I undo the transaction?
 
