--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -23,7 +23,7 @@ Releases of the CLI wallet are
 [tagged and hosted on Github](https://github.com/helium/helium-wallet-rs/tags). Click on "Downloads"
 for the most recent release and select the appropriate package for your operating system.
 
-Unpack the zip file and place the helium-wallet binary in your $PATH somewhere. This operation
+Unpack the zip file and place the helium-wallet binary in your `$PATH` somewhere. This operation
 differs depending on your operating system, but is a common task and easily searchable.
 
 ## Usage
@@ -281,3 +281,67 @@ using the API endpoint:
 ```
 https://api.helium.io/v1/pending_transactions/YOUR_HASH_HERE
 ```
+
+---
+
+## Transfer Hotspot from 24-word Wallet
+
+If a Hotspot is transferred to a 24-word wallet, that is ok! However, most Maker Hotspot Management
+Apps do not currently support 24-word wallets.
+
+To transfer a Hotspot from a 24-word wallet to a 12-word wallet, follow the steps below.
+
+1. Create a 12-word wallet to receive the Hotspot using the
+   [Helium Hotspot App](/wallets/app-wallet) and record the Public Key.
+
+2. Download and install the [Helium Command Line Wallet](/wallets/cli-wallet#installing-cli-wallet)
+   as outlined above. and navigate to the installation directory.
+3. Import your 24-word seed phrase to the CLI Wallet.
+
+```bash
+./helium-wallet create basic --seed bip39 --output my-24-word-wallet.key
+```
+
+| argument                         | description                                                                                                      |
+| -------------------------------- | ---------------------------------------------------------------------------------------------------------------- |
+| `create basic`                   | create a wallet with a single key, as opposed to a [sharded wallet](/wallets/cli-wallet#sharded-wallet)          |
+| `--seed bip39`                   | import with an existing seed phrase using the `bip39` word list                                                  |
+| `--output my-24-word-wallet.key` | output the wallet key file to a location of your choosing, in this case to a file called `my-24-word-wallet.key` |
+
+4. Find the Gateway ID of the Hotspot to be transferred by running
+
+```bash
+./helium-wallet hotspots list
+```
+
+5. Perform a Dry Run of the Hotspot transfer
+
+```bash
+./helium-wallet -f my-24-word-wallet.key hotspots transfer <gateway> <new-owner>
+```
+
+| argument                   | description                                                             |
+| -------------------------- | ----------------------------------------------------------------------- |
+| `-f my-24-word-wallet.key` | use a file for the Hotspot wallet, in this case `my-24-word-wallet.key` |
+| `hotspots transfer`        | run a Hotspot transfer                                                  |
+| `<gateway>`                | the gateway id you collected from Step 4 above                          |
+| `<new-owner>`              | the public Wallet Address to receive the Hotspot                        |
+
+6. The above will do a test try and have an output you should verify.
+
+7. Now it's time to run it for real.
+
+:::danger Point of No Return
+
+Including the `--commit` flag submits the transfer transaction to the blockchain.
+
+**There is no going back from this** so please take your time and double-check your inputs.
+
+:::
+
+```bash
+./helium-wallet -f my-24-word-wallet.key hotspots transfer <gateway> <new-owner> --commit
+```
+
+8. Once the transfer transaction is validated by the blockchain, your Hotspot will appear in the new
+   12-word wallet.
