--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -30,8 +30,8 @@ you can import it into the Wallet app.
 
 |  Account Type  | Action                                                                                |
 | :------------: | :------------------------------------------------------------------------------------ |
-| 12 word wallet | Tap the 12 Words button and enter in the 12 word seed phrase, in the original order.  |
-| 24 word wallet | Tap the 24 Words button and enter in the 24 word seed phrase, in the original order.  |
+| 12-word wallet | Tap the `12 Word` button and enter in the 12-word seed phrase, in the original order. |
+| 24-word wallet | Tap the `24 Word` button and enter in the 24-word seed phrase, in the original order. |
 |     Ledger     | Tap the Ledger option and follow the in-app prompts to pair with the hardware wallet. |
 
 ### Creating A New Wallet
@@ -41,10 +41,10 @@ you can import it into the Wallet app.
   src={useBaseUrl('img/wallets/helium-wallet-app/new-account-banner.png')}
 />
 
-Wallets created with the Helium Wallet app are generated with a 24 word seed phrase. These 24 words
+Wallets created with the Helium Wallet app are generated with a 24-word seed phrase. These 24 words
 in correct order are the only way to access the wallet, and can never be recovered if lost. **They
-should never be shared**, as whoever has them is considered the owner of the HNT included. Anyone
-asking for them is guaranteed to be a scammer.
+should never be shared**, as whoever has them is considered the owner of all Tokens, Hotspots, or
+Validators. Anyone asking for them is guaranteed to be a scammer.
 
 **Taking and storing screenshots of the seed words is not recommended, as it is not a** secure way
 to store them. Screenshots and photos stored or backed up in the cloud can easily be hacked and
@@ -158,14 +158,14 @@ adjusted at any time.
 
 Each Account imported to the Helium Wallet App has separate settings.
 
-|     Setting     | Description                                                                                                                                                                                                |
-| :-------------: | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-|  Account Alias  | You can rename the wallet here for organization (does not affect your wallet address or HNT)                                                                                                               |
-| Default Account | When using multiple wallets, this toggle will determine which one is the default and will show first whenever the app is opened.                                                                           |
-|  Reveal Words   | While logged in, you can view your 12 or 24 word seed phrase. These are required for login/logout of a wallet, and can never be recovered if lost. Lose these, lose the wallet and everything it contains. |
-|  Copy Address   | Copies the wallet address to your devices clipboard                                                                                                                                                        |
-|  Share Address  | Provides QR code so someone can scan your wallet address, and allows you to quick share it via email or text.                                                                                              |
-|    Sign Out     | logs you out of the current wallet. The original 12 or 24 word seed phrase is required, to ensure the words are safely backed up since they can not be recovered.                                          |
+|     Setting     | Description                                                                                                                                                                                                     |
+| :-------------: | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+|  Account Alias  | You can rename the wallet here for organization (does not affect your wallet address or HNT)                                                                                                                    |
+| Default Account | When using multiple wallets, this toggle will determine which one is the default and will show first whenever the app is opened.                                                                                |
+|  Reveal Words   | While logged in, you can view your 12-word or 24-word seed phrase. These are required for login/logout of a wallet, and can never be recovered if lost. Lose these, lose the wallet and everything it contains. |
+|  Copy Address   | Copies the wallet address to your devices clipboard                                                                                                                                                             |
+|  Share Address  | Provides QR code so someone can scan your wallet address, and allows you to quick share it via email or text.                                                                                                   |
+|    Sign Out     | logs you out of the current wallet. The original 12-word or 24-word seed phrase is required, to ensure the words are safely backed up since they can not be recovered.                                          |
 
 ### Security Settings
 
