--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -9,12 +9,16 @@ slug: /wallets/app-wallet
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-:::important Sunset
+:::important Sunsetting Features
 
 Wallet-related functionality in the Helium Hotspot app will be sunsetted over the coming months.
 This functionality is moving to the new [Helium Wallet App](/wallets/helium-wallet-app)
 
 :::
+
+The Helium Hotspot App focuses on people who want to send or receive HNT or manage Hotspots. Other
+activities, such as managing end-devices and OUIs (i.e. users of the network) are generally best
+suited for the command line wallet.
 
 The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
 [Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) includes everything you
@@ -26,13 +30,13 @@ Helium wallet, you're able to do things like:
 - Configure your Wi-Fi
 - View your Hotspot's activity
 - See where other Hotspots are located
-- Run Discovery Mode
 
 [Check out the latest app release notes](https://engineering.helium.com/)
 
 ## Guides
 
-- [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
+- [Twelve Word Seed Phrase](/wallets/twelve-words)
+- [Twenty Four Word Seed Phrase](/wallets/twenty-four-words)
 - [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
 - [Understanding Hexagons](/wallets/app-wallet/hexagons)
 - [Transaction Failures](/wallets/app-wallet/transaction-failures)
@@ -41,7 +45,7 @@ Helium wallet, you're able to do things like:
 
 ## Hotspot Tab
 
-The Hotspot tab shows your hotspot(s). There's a location map, the Hotspots Settings section (gear
+The Hotspot tab shows your Hotspot(s). There's a location map, the Hotspots Settings section (gear
 icon), as well as a general health status (Online or Needs Attention). The settings provide access
 to updating the location and WiFi network, as well as running the Hotspots diagnostic report if
 needed.
@@ -57,7 +61,7 @@ and recent transactions.
 
 ## Notifications Tab
 
-This sections gives you a timeline view of all notifications relevant to your hotspots and wallet
+This sections gives you a timeline view of all notifications relevant to your Hotspots and wallet
 transcations.
 
 <img src={useBaseUrl('img/wallets/helium-app/notifications-nav.png')} />
