--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -64,7 +64,7 @@ Radio dashboard appears under the "Radio Dashboard" tab on the local IP address 
 - If you are using a Bobber 500 gateway, you can access the miner and radio dashboard via this URL:
   [http://bobber-gateway.local/](http://bobber-gateway.local/)
 
-5G Hotspot will appear on [explorer.helium.com](https://explorer.helium.com/) within 2-4 days,
+5G Hotspot will appear on [explorer.helium.com](https://explorer.helium.com/) within 5 days,
 depending on how quickly it is registered in the SAS.
 
 ## Install the Helium Wallet App to Manage HNT/MOBILE Token
@@ -182,7 +182,7 @@ In this example, the total rewards Points per epoch is 4,000 and the ratios are 
 
 Each Small Cell Radio is allocated its rewards based on the reward weight of the model.
 
-> Small Cell Reward = Daily Rewards \* Small Cell Points Ratio / Count of Small Cell Type
+> Small Cell Reward = Daily Rewards \* Reward Weight / Count of Small Cell Type
 
 ```bash
 High-Power Outdoor  => 100,000,000 * 0.15 /   150 = 100,000 MOBILE per day
