standardize logo sizes and file types

--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -40,7 +40,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/adeunis/adeunis-logo.jpg')}
+          src={useBaseUrl('img/use-the-network/devices/ready-to-use/adeunis/adeunis-logo.png')}
         />
       </a>
       <p></p>
@@ -120,7 +120,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/decentlab/dl-iam">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/decentlab-logo.jpg')}
+          src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/decentlab-logo.png')}
         />
       </a>
       <p></p>
@@ -161,7 +161,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/dragino/rs485-ln">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/dragino/dragino-logo.jpg')}
+          src={useBaseUrl('img/use-the-network/devices/ready-to-use/dragino/dragino-logo.png')}
         />
       </a>
       <p></p>
@@ -187,7 +187,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/imst/range-extender">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/imst/imst-logo.jfif')}
+          src={useBaseUrl('img/use-the-network/devices/ready-to-use/imst/imst-logo.png')}
         />
       </a>
       <p></p>
@@ -226,7 +226,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/laird/rs1xx-temp-rh-sensor">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/laird/laird-logo.jpg')}
+          src={useBaseUrl('img/use-the-network/devices/ready-to-use/laird/laird-logo.png')}
         />
       </a>
       <p></p>
@@ -293,7 +293,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/netvox/r311a">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/netvox/netvox-logo.jpg')}
+          src={useBaseUrl('img/use-the-network/devices/ready-to-use/netvox/netvox-logo.png')}
         />
       </a>
       <p></p>
@@ -319,7 +319,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/rakwireless/rak7204">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rakwireless.svg')}
+          src={useBaseUrl(
+            'img/use-the-network/devices/ready-to-use/rakwireless/rakwireless-logo.png',
+          )}
         />
       </a>
       <p></p>
@@ -333,7 +335,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img
           className="manufacturericon"
           src={useBaseUrl(
-            'img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-logo.webp',
+            'img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-logo.png',
           )}
         />
       </a>
@@ -347,7 +349,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a href="/use-the-network/devices/ready-to-use/sensedge/senstick-pro">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/ready-to-use/sensedge/sensedge-logo.svg')}
+          src={useBaseUrl('img/use-the-network/devices/ready-to-use/sensedge/sensedge-logo.png')}
         />
       </a>
       <p></p>
