--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -149,7 +149,7 @@ details with the given staking provider.
 | :----------------------------------------------------------- | :---------------------- | :---------- | :--------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------- | :-------------------------------------------- |
 | [Allnodes](https://www.allnodes.com)                         | Yes                     | No          | $80 per month (Basic) or $0.2380 per hour (Advanced)                                                             |
 | [Argon.build](https://www.argon.build)                       | Yes                     | No          | 3% comission on earnings                                                                                         |
-| [Bison Trails](https://www.bisontrails.co)                   | Yes                     | No          |                                                                                                                  | Does not offer service to individuals who plan to run fewer than 10 nodes   |
+| [Bison Trails (Coinbase Cloud)](https://www.bisontrails.co)                   | Yes                     | No          |                                                                                                                  | Does not offer service to individuals who plan to run fewer than 10 nodes   |
 | [Blockdaemon](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                                                                      | Cloud offerings.                                                            |
 | [Chorus One](https://chorus.one/products/whitelabel-staking) | Yes                     | No          |                                                                                                                  | Does not have public pricing.                                               |
 | [DLI](https://dlinodes.com)                                  | Yes                     | Yes         | All run in DLI Cloud, Staking, Nodes, 24/7 Support                                                               |
@@ -160,7 +160,6 @@ details with the given staking provider.
 | [Helium Staking](https://www.helium-staking.com)             | Yes                     | Yes         | $150 per month for non-custodial full node. 4% of rewards for pool.                                              |
 | [HNT Validators](https://www.hntvalidators.com)              | Yes                     | No          | $199 per month                                                                                                   |
 | [HostNodes](https://hostnodes.online)                        | Yes                     | No          | $119 per month                                                                                                   | 10% discount for 6 months plan, 20% discount for 1 year plan                |
-| [Multipool App](https://www.multipool.app)                   | Yes                     | Yes         | $120 per month for non-custodial full node or pool $120 shared between participants + 1.2% comission on earnings | 100 HNT min @ $1.2 (per 100 HNT increment)                                  |
 | [NodeValidators](https://nodevalidators.com)                 | Yes                     | Coming soon | $120 per month + 2.5% comission on earnings                                                                      |
 | [Staked](https://staking.staked.us/helium-staking)           | Yes                     | No          |                                                                                                                  | Does not have public pricing.                                               |
 | [StakeJoy](https://stakejoy.com)                             | Yes                     | No          | 3% comission on earnings                                                                                         |
