Apply suggestions from code review
Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6594,7 +6594,7 @@ GET https://api.helium.io/v1/validators/stats
 
 ```
 
-Returns stats for validators.
+Returns stats for Validators.
 
 <Tabs
   block={true}
@@ -7588,7 +7588,7 @@ _Query Parameters_
 </TabItem>
 <TabItem value="response">
 
-Rewards for a validator in the last 24 hours: `min_time=-24%20hour`
+Rewards for a Validator in the last 24 hours: `min_time=-24%20hour`
 
 :::note
 
