--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -145,24 +145,23 @@ details with the given staking provider.
 
 :::
 
-| Provider                                                     | Non-custodial full node | Pooling     | Pricing                                                                                                          | Notes                                                                       | Discord Server                                |
-| :----------------------------------------------------------- | :---------------------- | :---------- | :--------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------- | :-------------------------------------------- |
-| [Allnodes](https://www.allnodes.com)                         | Yes                     | No          | $40 per month (Basic) or $0.1190 per hour (Advanced)                                                             |
-| [Argon.build](https://www.argon.build)                       | Yes                     | No          | 3% comission on earnings                                                                                         |
-| [Bison Trails](https://www.bisontrails.co)                   | Yes                     | No          |                                                                                                                  | Does not offer service to individuals who plan to run fewer than 10 nodes   |
-| [Blockdaemon](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                                                                      | Cloud offerings.                                                            |
-| [Chorus One](https://chorus.one/products/whitelabel-staking) | Yes                     | No          |                                                                                                                  | Does not have public pricing.                                               |
-| [DLI](https://dlinodes.com)                                  | Yes                     | Yes         | All run in DLI Cloud, Staking, Nodes, 24/7 Support                                                               |
-| [Figment](https://figment.io/)                               | Yes                     | No          | 5% comission                                                                                                     |
-| [Foundry Digital](https://foundrystaking.com/)               | Yes                     | No          | $150 per month                                                                                                   |
-| [GTel Networks](https://www.gtelnetworks.com/)               | Yes                     | No          | 6% Dedicated / 8% Shared or $249.00USD                                                                           | High Performance, Low P/T Ratio, Sub 1s Validation Times, Incorporated 1999 | [GTel Discord](https://discord.gg/Gnn4RSSevs) |
-| [Helium Rising](https://www.heliumrising.com)                | Yes                     | Yes         | 5% comission                                                                                                     |
-| [Helium Staking](https://www.helium-staking.com)             | Yes                     | Yes         | $150 per month for non-custodial full node. 4% of rewards for pool.                                              |
-| [HNT Validators](https://www.hntvalidators.com)              | Yes                     | No          | $199 per month                                                                                                   |
-| [HostNodes](https://hostnodes.online)                        | Yes                     | No          | $119 per month                                                                                                   | 10% discount for 6 months plan, 20% discount for 1 year plan                |
-| [Multipool App](https://www.multipool.app)                   | Yes                     | Yes         | $120 per month for non-custodial full node or pool $120 shared between participants + 1.2% comission on earnings | 100 HNT min @ $1.2 (per 100 HNT increment)                                  |
-| [NodeValidators](https://nodevalidators.com)                 | Yes                     | Coming soon | $120 per month + 2.5% comission on earnings                                                                      |
-| [Staked](https://staking.staked.us/helium-staking)           | Yes                     | No          |                                                                                                                  | Does not have public pricing.                                               |
-| [StakeJoy](https://stakejoy.com)                             | Yes                     | No          | 3% comission on earnings                                                                                         |
-| [StakeMyHNT](https://www.stakemyhnt.com)                     | Yes                     | Coming soon | $169 per month                                                                                                   |
-| [Validators Pool](https://helium.bx-host.com)                | Yes                     | No          | $120 per month + 2% comission on earnings                                                                        |
+| Provider                                                     | Non-custodial full node | Pooling     | Pricing                                                             | Notes                                                                       | Discord Server                                |
+| :----------------------------------------------------------- | :---------------------- | :---------- | :------------------------------------------------------------------ | :-------------------------------------------------------------------------- | :-------------------------------------------- |
+| [Allnodes](https://www.allnodes.com)                         | Yes                     | No          | $80 per month (Basic) or $0.2380 per hour (Advanced)                |
+| [Argon.build](https://www.argon.build)                       | Yes                     | No          | 3% comission on earnings                                            |
+| [Bison Trails (Coinbase Cloud)](https://www.bisontrails.co)  | Yes                     | No          |                                                                     | Does not offer service to individuals who plan to run fewer than 10 nodes   |
+| [Blockdaemon](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                         | Cloud offerings.                                                            |
+| [Chorus One](https://chorus.one/products/whitelabel-staking) | Yes                     | No          |                                                                     | Does not have public pricing.                                               |
+| [DLI](https://dlinodes.com)                                  | Yes                     | Yes         | All run in DLI Cloud, Staking, Nodes, 24/7 Support                  |
+| [Figment](https://figment.io/)                               | Yes                     | No          | 5% comission                                                        |
+| [Foundry Digital](https://foundrystaking.com/)               | Yes                     | No          | $150 per month                                                      |
+| [GTel Networks](https://www.gtelnetworks.com/)               | Yes                     | No          | 6% Dedicated / 8% Shared or $249.00USD                              | High Performance, Low P/T Ratio, Sub 1s Validation Times, Incorporated 1999 | [GTel Discord](https://discord.gg/Gnn4RSSevs) |
+| [Helium Rising](https://www.heliumrising.com)                | Yes                     | Yes         | 5% comission                                                        |
+| [Helium Staking](https://www.helium-staking.com)             | Yes                     | Yes         | $150 per month for non-custodial full node. 4% of rewards for pool. |
+| [HNT Validators](https://www.hntvalidators.com)              | Yes                     | No          | $199 per month                                                      |
+| [HostNodes](https://hostnodes.online)                        | Yes                     | No          | $119 per month                                                      | 10% discount for 6 months plan, 20% discount for 1 year plan                |
+| [Staked](https://staking.staked.us/helium-staking)           | Yes                     | No          |                                                                     | Does not have public pricing.                                               |
+| [StakeJoy](https://stakejoy.com)                             | Yes                     | No          | 3% comission on earnings                                            |
+| [StakeMyHNT](https://www.stakemyhnt.com)                     | Yes                     | Coming soon | $169 per month                                                      |
+| [Validators Pool](https://helium.bx-host.com)                | Yes                     | No          | $120 per month + 2% comission on earnings                           |
+
